--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joseph ^_~</title>
+    <meta
+      property="og:title"
+      content="Joseph's Portfolio – Full Stack Developer"
+    />
+    <meta
+      property="og:description"
+      content="A full stack developer based in Lagos."
+    />
+    <meta
+      property="og:image"
+      content="https://portfolio-chi-six-jnpbqearet.vercel.app/joseph.png"
+    />
+    <meta
+      property="og:url"
+      content="https://portfolio-chi-six-jnpbqearet.vercel.app"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
